Fixed a big with contactList being displayed too low

--- a/css/hyperboleon.css
+++ b/css/hyperboleon.css
@@ -59,8 +59,8 @@ header #contact {
 
 #contactList {
     position: fixed; 
-    top: 200; 
-    right: 0;
+    top: 200px;
+    right: 0px;
     background-color: grey;
     color: white;
     font-family: 'Carrois Gothic SC', sans-serif;
